Per-problem permissions and fixed bugs
Implemented per-problem permissions to view and submit
Fixed-bug: email was not stored on registration
Changed some IntegerFields to PositiveIntegerFields
Fixed minor typo in README.md

--- a/templates/view_contest.html
+++ b/templates/view_contest.html
@@ -5,7 +5,7 @@
 {% block body_block %}
 <div class="container">
 	<h1 class="text-center">Problems in {{contest.get_name}}</h1>
-	{% if contest.can_view %}
+	{% if contest.get_can_view %}
 	<table class="table table-bordered">
 		<thead>
 			<tr>
