--- a/templates/view_problem.html
+++ b/templates/view_problem.html
@@ -26,7 +26,7 @@
 			<p><a role="button" class="btn btn-default">All submissions</a></p>
 			<p><a role="button" class="btn btn-default">My submissions</a></p>
 			<p>
-				{% if problem.contest.can_submit %}
+				{% if problem.get_can_submit %}
 				<a role="button" class="btn btn-default btn-primary" href="{{problem.get_submit_url}}">
 				{% else %}
 				<a role="button" class="btn btn-default btn-primary disabled" href="{{problem.get_submit_url}}">
