Changed a URL in account/urls.py
Changed "/account/account_info/" to "account/myaccount/"

--- a/account/templates/account/edit_profile.html
+++ b/account/templates/account/edit_profile.html
@@ -41,7 +41,7 @@
 		<div class="text-center">
 			<p><a href="{% url 'account:change_password' %}">Change password</a></p>
 			<p><a href="{% url 'account:public_profile' user.username %}">My public profile</a></p>
-			<p><a href="{% url 'account:account_info' %}">Account info</a></p>
+			<p><a href="{% url 'account:myaccount' %}">Account info</a></p>
 		</div>
 	</div>
 	</div>
